Remove Stripe API keys from tracked files, add to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,11 @@ yarn-error.log*
 # local env files
 .env*.local
 .env
+.env.local.backup
+vercel-env-vars.txt
+DEPLOYMENT_PLAN.md
+QUICK_DEPLOY.md
+scripts/auto-setup.sh
 
 # vercel
 .vercel
