Remove Stripe keys from DEPLOY_TO_VERCEL.md and SETUP.md

--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,8 @@ yarn-error.log*
 vercel-env-vars.txt
 DEPLOYMENT_PLAN.md
 QUICK_DEPLOY.md
+DEPLOY_TO_VERCEL.md
+SETUP.md
 scripts/auto-setup.sh
 
 # vercel
