Update vercel.json: Add rootDirectory setting

--- a/vercel.json
+++ b/vercel.json
@@ -4,6 +4,7 @@
   "installCommand": "npm install",
   "framework": "nextjs",
   "regions": ["iad1"],
+  "rootDirectory": "webapp",
   "env": {
     "NODE_ENV": "production"
   }
