--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "db:generate": "prisma generate",
     "db:push": "prisma db push",
     "db:studio": "prisma studio",
-    "db:migrate": "prisma migrate dev"
+    "db:migrate": "prisma migrate dev",
+    "deploy:verify": "node scripts/auto-deploy-verify.js",
+    "deploy:fix": "node scripts/auto-fix-common-errors.js",
+    "deploy:auto": "bash scripts/auto-deploy-workflow.sh"
   },
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.7",
