--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,3 @@
 {
-  "buildCommand": "prisma generate && next build",
-  "devCommand": "npm run dev",
-  "installCommand": "npm install",
-  "framework": "nextjs",
-  "regions": ["iad1"]
+  "framework": "nextjs"
 }
