--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,10 @@
 {
-  "buildCommand": "prisma generate && next build",
-  "framework": "nextjs"
+  "buildCommand": "npm run build",
+  "devCommand": "npm run dev",
+  "installCommand": "npm install",
+  "framework": "nextjs",
+  "regions": ["iad1"],
+  "env": {
+    "NODE_ENV": "production"
+  }
 }
