Add date-fns dependency for status strip

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@zxcvbn-ts/language-en": "^3.0.2",
     "bcryptjs": "^2.4.3",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "jsonwebtoken": "^9.0.2",
     "next": "^14.2.0",
     "next-auth": "^4.24.5",
